# aks-bpa

./: .gitignore  LICENSE  README.md  deploy-aks.ps1  deploy-aks.sh  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  clusters.py  recommendations.py  scans.py  subscriptions.py
backend/app/checks/: __init__.py
backend/app/checks/definitions/: recommendations.json
backend/app/checks/definitions/kql/: Configure_system_nodepool_count.kql  Configure_user_nodepool_count.kql  Enable_and_remediate_Azure_Policies.kql  Use_Ephemeral_OS_disks_on_AKS_clusters.kql  backup_azure_kubernetes_service.kql  enable_cluster_auto_scaler.kql  isolate_system_pods.kql  node_pool_check.kql
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  cluster.py  scan.py
backend/app/services/: __init__.py  assessment_engine.py  azure_client.py  recommendations.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  PillarBars.tsx  ScoreDonut.tsx  StartScanDialog.tsx  StatusBadge.tsx
frontend/src/pages/: ClustersPage.tsx  DashboardPage.tsx  RecommendationsPage.tsx  ScanDetailPage.tsx  ScansPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
k8s/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml.template
